test/xiaohuiyun/ingress-nginx/inspection-api.yaml
kind: Service
apiVersion: v1
metadata:
  name: inspection-api
  namespace: xiaohuiyun
spec:
  type: ExternalName
  externalName: zaun-inspection-api.zaun.svc.cluster.local
